// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - FinalPage renders correctly if submit fail 1`] = `
<main
  className="sc-bxivhb kbaKdC"
>
  <section
    className="sc-bdVaJa sc-ifAKCX eQlzkT"
  >
    <p
      className="sc-htpNat kvSJNm"
      color="#E74536"
    >
      Error occured: error occured
    </p>
  </section>
</main>
`;

exports[`COMPONENT - FinalPage renders correctly if submit success 1`] = `
<main
  className="sc-bxivhb kbaKdC"
>
  <section
    className="sc-bdVaJa sc-ifAKCX eQlzkT"
  >
    <h1
      className="sc-bwzfXH fIpTJf StyledHeading-sc-1rdh4aw-0 iDyXcl"
    >
      Thank you for taking the time to complete this survey.
    </h1>
  </section>
</main>
`;
